--- a/denops/@dpp-exts/installer/deno.json
+++ b/denops/@dpp-exts/installer/deno.json
@@ -1,7 +1,7 @@
 {
   "name": "@shougo/dpp-ext-installer",
   "exports": {
-    ".": "./installer.ts"
+    ".": "./main.ts"
   },
   "publish": {
     "include": [
